2011-07-20  Peter Hedwig <peter@affenbande.org>

	* term/lua/gnuplot-tikz.lua:  Point types 10 and 11 were upside down.
	Bug #3368877

	* fill paths now have a pensize > 0 to have slight overlap of tiles to
	avoid rendering artifacts

	* path building was broken and showed interrupted lines on certain plots
	e.g. plot '+' u 1:($1**2):($1**2) with lines palette lw 3 title '$x^2$'

	* a new terminal option (tightboundingbox|notightboundingbox) is added

2011-07-20  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c:  Allow binary data for plot style fillsteps
	Bug #3371199

	* term/gd.trm:  Prevent infinite loop on unrecognized terminal option

2011-07-14  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (plot_boxes):  Correct positioning of bars in clustered
	histograms when some values are missing.
	Bug #3360882

	* src/datafile.c (df_open plot_option_using df_readascii f_column)
	src/datafile.h src/parse.c (create_call_column_at extend_at) src/parse.h
	src/eval.c src/eval.h src/plot2d.c src/plot3d.c docs/gnuplot.doc:

	Implement column selection based on matching a leading substring of the
	column header.
	    plot 'foo' using (column("A")):(column("B"))
	    plot 'foo' using "A":"B"
	    plot for [value in "Weight Height"] 'foo' using "Age":value

2011-07-12  Peter Juhasz  <juhaszp@users.sourceforge.net>

	* src/command.c src/term.c: Fix crash of 'test' after an 
	unsuccessful 'set term'
	Bug #3347683

	* src/parse.c src/parse.h docs/gnuplot.doc: Add nested iteration in plot
	and other commands: constructs like 'plot for [i=1:5] for [j=1:5] foo'
	are now valid

	* src/axis.c src/axis.h src/color.c src/graph3d.c src/graphics.c
	src/save.c src/set.c src/show.c src/unset.c docs/gnuplot.doc:
	Allow explicit justification for tic labels, e.g. set xtics right

2011-07-11  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (plot_steps): Don't pass negative heights to t->fillbox
	Bug #3358185
